# 42-Heilbronn

./: Makefile  README.md  ft_parser.c  ft_print_cs.c  ft_print_id.c  ft_print_ux.c  ft_printf.c  ft_printf.h  ft_putstr_fd.c  ft_utils_bonus.c
Core/a_maze_ing/: Makefile  README.md  a_maze_ing.py  config.txt  pyproject.toml
Core/a_maze_ing/mazegen/: __init__.py  algorithms.py  generator.py  utils.py  visualizer.py
Core/born2beroot/: signature.txt
Core/call_me_maybe/: Makefile  README.md  fetch_vocab.py  pyproject.toml  test_bpe.py  test_decode.py  test_tokenizer.py  test_torch.py  test_vocab.py
Core/call_me_maybe/data/models/: models--Qwen--Qwen3-0.6B
Core/call_me_maybe/data/output/: function_calling_results.json
Core/call_me_maybe/llm_sdk/: __init__.py
Core/call_me_maybe/src/: __main__.py  dfa.py  generation.py  models.py  schema_compiler.py  vocab.py
Core/codexion/: .gitignore  Makefile  README.md  codexion.h  init.c  main.c  monitor.c  routine.c  scheduler.c  utils.c
Core/fly_in/: Makefile  README.md  main.py  models.py  parser.py  pathfinder.py  simulator.py  visualizer.py
Core/get_next_line/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
Core/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  (+37 more)
printf/: Makefile  ft_print_hex.c  ft_print_nbr.c  ft_print_text.c  ft_printf.c  ft_printf.h  ft_printf_utils.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putnbr_x.c  ft_putptr.c  ft_putstr_fd.c  ft_strchr.c  ft_strlen.c
(+364 files in other folders)
